--- a/Contactenos/index.html
+++ b/Contactenos/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../Home/index.html"><img src="./Iconos/Complot-Logo.png" width="300px" height="52px"
+            <a href="../index.html"><img src="./Iconos/Complot-Logo.png" width="300px" height="52px"
                     alt="Logo Complot"></a>
         </div>
         <nav>
