--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPLOT</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Home/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap"
         rel="stylesheet">
@@ -15,34 +15,34 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../Home/index.html"><img src="./Iconos/Complot-Logo.png" width="300px" height="52px"
+            <a href="./index.html"><img src="./Home/Iconos/Complot-Logo.png" width="300px" height="52px"
                     alt="Logo Complot"></a>
         </div>
         <nav>
             <ul>
                 <li>
-                    <a href="../Quienes-Somos/index.html">¿Quiénes somos?</a>
+                    <a href="./Quienes-Somos/index.html">¿Quiénes somos?</a>
                 </li>
                 <li>
-                    <a href="../Music-Edition/index.html">Lo Nuevo</a>
+                    <a href="./Music-Edition/index.html">Lo Nuevo</a>
                 </li>
                 <li>
-                    <a href="../Music-Edition/index.html">Prendas</a>
+                    <a href="./Music-Edition/index.html">Prendas</a>
                 </li>
                 <li>
-                    <a href="../Home/index2.html">Accesorios</a>
+                    <a href="./Home/index2.html">Accesorios</a>
                 </li>
                 <li>
-                    <a href="../Music-Edition/index.html">Outlet</a>
+                    <a href="./Music-Edition/index.html">Outlet</a>
                 </li>
                 <li>
-                    <a href="../Redes/index.html">Collection</a>
+                    <a href="./Redes/index.html">Collection</a>
                 </li>
                 <li>
-                    <a href="../Redes/index.html">Lookbook</a>
+                    <a href="./Redes/index.html">Lookbook</a>
                 </li>
                 <li>
-                    <a href="../Contactenos/index.html">Contáctenos</a>
+                    <a href="./Contactenos/index.html">Contáctenos</a>
                 </li>
             </ul>
         </nav>
@@ -52,24 +52,24 @@
             <h1 class="titulo">La comunidad más grande</h1>
             <h3 class="bajada">Vestí tu estilo</h3>
             <div>
-                <a href="index2.html" class="cta_primario">Registrate</a>
+                <a href="./Home/index2.html" class="cta_primario">Registrate</a>
             </div>
         </section>
         <section id="regalos">
             <div class="music_edition">
-                <a href="../Music-Edition/index.html">
+                <a href="./Music-Edition/index.html">
                     <h2>30%</h2>
                     <h4 class="txt_regalo">Music Edition</h4>
                 </a>
             </div>
             <div class="hombre">
-                <a href="index2.html">
+                <a href="./Home/index2.html">
                     <h2>40%</h2>
                     <h4 class="txt_regalo">Hombre</h4>
                 </a>
             </div>
             <div class="mujer">
-                <a href="index2.html">
+                <a href="./Home/index2.html">
                     <h2>50%</h2>
                     <h4 class="txt_regalo">Mujer</h4>
                 </a>
@@ -77,19 +77,19 @@
         </section>
         <section id="recursos">
             <h5 class="recurso_video">Mira el video que está siendo trending topic en Instagram</h5>
-            <a href="../Redes/index.html">
-                <img src="./Imagenes/video.png" width="767px" height="427px" alt="Video">
+            <a href="./Redes/index.html">
+                <img src="./Home/Imagenes/video.png" width="767px" height="427px" alt="Video">
             </a>
         </section>
         <section id="caracteristicas">
-            <a href="../Music-Edition/index.html">
+            <a href="./Music-Edition/index.html">
                 <div class="img_arthur">
                     <h6>CAMPERA NEW ARTHUR</h6>
                     <p class="p_arthur">CAMPERA DE SIRE MATELASSEADA, CAPUCHA AJUSTABLE, BOLSILLOS DELANTEROS, CIERRE
                         METALICO Y BROCHESNEGROS EN CARTERA.</p>
                 </div>
             </a>
-            <a href="../Music-Edition/index.html">
+            <a href="./Music-Edition/index.html">
                 <div class="img_lizzie">
                     <h6>CAMPERA LIZZIE</h6>
                     <p class="p_lizzie">CAMPERA PUDDER METALIZADA CON CAPUCHA, CIERRE Y BROCHES METALICOS. LARGO POR
@@ -114,32 +114,32 @@
     </article>
     <footer>
         <div class="nosotros">
-            <a href="../Quienes-Somos/index.html" class="link_footer">
+            <a href="./Quienes-Somos/index.html" class="link_footer">
                 <p>Acerca de Nosotros</p>
             </a>
-            <a href="../Contactenos/index.html" class="link_footer">
+            <a href="./Contactenos/index.html" class="link_footer">
                 <p>Contacto</p>
             </a>
-            <a href="../Music-Edition/index.html" class="link_footer">
+            <a href="./Music-Edition/index.html" class="link_footer">
                 <p>Catalogo</p>
             </a>
         </div>
         <div>
             <div class="redes_sociales">
-                <a href="../Redes/index.html" class="link_footer">
-                    <img src="./Iconos/facebook.png" height="16px" alt="Facebook">
+                <a href="./Redes/index.html" class="link_footer">
+                    <img src="./Home/Iconos/facebook.png" height="16px" alt="Facebook">
                     <p>Facebook</p>
                 </a>
             </div>
             <div class="redes_sociales">
-                <a href="../Redes/index.html" class="link_footer">
-                    <img src="./Iconos/logotipo-de-instagram.png" alt="Instagram">
+                <a href="./Redes/index.html" class="link_footer">
+                    <img src="./Home/Iconos/logotipo-de-instagram.png" alt="Instagram">
                     <p>Instagram</p>
                 </a>
             </div>
             <div class="redes_sociales">
-                <a href="../Redes/index.html" class="link_footer">
-                    <img src="./Iconos/signo-de-twitter.png" alt="Twitter">
+                <a href="./Redes/index.html" class="link_footer">
+                    <img src="./Home/Iconos/signo-de-twitter.png" alt="Twitter">
                     <p>Twitter</p>
                 </a>
             </div>
