--- a/Home/index2.html
+++ b/Home/index2.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../Home/index.html"><img src="./Iconos/Complot-Logo.png" width="300px" height="52px"
+            <a href="../index.html"><img src="./Iconos/Complot-Logo.png" width="300px" height="52px"
                     alt="Logo Complot"></a>
         </div>
         <nav>
@@ -46,7 +46,7 @@
     </header>
     <Section class="error">
         <h4>Pagina en construcción</h4>
-        <a href="./index.html" class="volver">Volver</a>
+        <a href="../index.html" class="volver">Volver</a>
     </Section>
     <footer>
         <div class="nosotros">
